bug_database_with_UI_iteration0/Bug_Collection/MPI/Bug17/Explanation.txt
* Error

```
buggy_version.c(21): error: expression must be a modifiable lvalue
          str =  "abcd";        
          ^

compilation aborted for buggy_version.c (code 2)
```
